@@ -4,6 +4,8 @@
 # http://isp-control.net
 #
 
+# Any adding & removing of variables should also be made in ispcp/gui/include/ispcp-config.php!
+
 #
 # Misc config variables
 #
