@@ -1,12 +1,6 @@
 <?php
-/**
- * Theme information
- *
- * @package phpMyAdmin Theme
- * @subpackage Omega
- */
-
 /* Theme information */
 $theme_name = 'omega';
-$theme_full_version = '2.9';
+$theme_version = 2;
+$theme_generation = 2;
 ?>
